name:                labourer
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/dp-cylme/labourer#readme
license:             BSD3
license-file:        LICENSE
author:              Danil Petrov
maintainer:          dpetrov@cyl.me
copyright:           Copyright: (c) 2016 Danil Petrov
category:            Web
build-type:          Custom
extra-source-files:  proto-src/*.proto
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     GooglePubSub
                     , Pusher
                     , Proto.EventLog
                     , Proto.InnerLogRep
  build-depends:       base >= 4.7 && < 5
                     , text >= 1.2
                     , retry
                     , lens >= 4.14
                     , gogol >= 0.1
                     , gogol-pubsub >= 0.1
                     , gogol-logging >= 0.1
                     , wai
                     , http-types >= 0.9
                     , aeson >= 0.11
                     , bytestring >= 0.10
                     , proto-lens
                     , proto-lens-protoc
  default-language:    Haskell2010

executable labourer-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , data-default
                     , gogol >= 0.1
                     , gogol-logging >= 0.1
                     , gogol-pubsub >= 0.1
                     , labourer
                     , lens >= 4.14
                     , optparse-generic >= 1.1
                     , text >= 1.2
                     , wai
                     , wai-extra
                     , warp
  default-language:    Haskell2010

test-suite labourer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , labourer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dp-cylme/labourer
