name:                labourer
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/dp-cylme/labourer#readme
license:             BSD3
license-file:        LICENSE
author:              Danil Petrov
maintainer:          dpetrov@cyl.me
copyright:           Copyright: (c) 2016 Danil Petrov
category:            Web
build-type:          Custom
extra-source-files:  dschemas/proto-src/*.proto
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     GooglePubSub
                     , Pusher
                     , Proto.Timestamp
                     , Proto.Struct
                     , Proto.CommonLogRep
  build-depends:       aeson >= 0.11
                     , base >= 4.7 && < 5
                     , bytestring >= 0.10
                     , containers >= 0.5
                     , gogol >= 0.1
                     , gogol-core >= 0.1
                     , gogol-logging >= 0.1
                     , gogol-pubsub >= 0.1
                     , http-types >= 0.9
                     , scientific >= 0.3 
                     , vector >= 0.11
                     , lens >= 4.14
                     , logging-effect >= 1.1
                     , proto-lens
                     , proto-lens-protoc
                     , retry
                     , text >= 1.2
                     , time >= 1.6
                     , unordered-containers >= 0.2
                     , wai
  default-language:    Haskell2010

executable labourer-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , data-default
                     , gogol >= 0.1
                     , gogol-logging >= 0.1
                     , gogol-pubsub >= 0.1
                     , labourer
                     , lens >= 4.14
                     , optparse-generic >= 1.1
                     , text >= 1.2
                     , wai
                     , wai-extra
                     , warp
                     , logging-effect >= 1.1
                     , logging-effect-google >= 0.1
                     , proto-lens >= 0.1
  default-language:    Haskell2010

test-suite labourer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , labourer
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dp-cylme/labourer
